# datalumina-project-template

./: .env.example  README.md  pyproject.toml
data/: download.py
examples/: amazon-bedrock-connect.py  azure-openai-connect.py  google-generativeai-connect.py  parser-backend-example.py
